# fedimapper

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  compose.yaml  dockerfile.ingest  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.db-journal
.github/workflows/: black.yaml  docker.yaml  isort.yaml  lockfiles.yaml  mypy.yaml  pypi.yaml  pytest.yaml
db/: env.py
db/versions/: 04c441968ceb_historical_stats.py  04eb2d68aa9f_peer_limits.py  08e94aac57b6_ban_keyword_list.py  235eb2654dd6_initial_database.py  3c5b523b871c_ban_host_digest.py  4cecd778ad0b_save_web_host.py  7320133ed7cc_clean_asn_company.py  8228c0622b52_rebuild_for_pg_support.py  9901e9db281d_track_last_success.py  a2631f842ebb_asn.py  b69dbaa8f2d8_software_version_breakdowns.py  c5c6d2b05721_record_blocked_api_calls.py  d2f8f060e54e_active_monthly_users.py  d89c2d5ff8be_save_instance_base_domain.py  e79ec4de795d_status_ingest_index.py  f11ddc61016b_instance_nodeinfo_version.py  f4f9ee0f606b_add_evils.py
docker/ingest/: prestart.sh  start.sh
docker/www/: prestart.sh
fedimapper/: __init__.py  cli.py  run.py  settings.py  www.py
fedimapper/models/: asn.py  ban.py  instance.py
fedimapper/routers/api/: stats.py
fedimapper/routers/api/common/responses/: cached_json.py
fedimapper/routers/api/common/schemas/: base.py  instances.py
fedimapper/routers/api/instances/: routes.py
fedimapper/routers/api/instances/schemas/: models.py
fedimapper/routers/api/meta/: routes.py
fedimapper/routers/api/meta/schemas/: models.py
fedimapper/routers/api/networks/: routes.py
fedimapper/routers/api/networks/schemas/: models.py
fedimapper/routers/api/reputation/: routes.py
fedimapper/routers/api/responses/: cached_json.py
fedimapper/routers/api/software/: routes.py
fedimapper/routers/api/world/: routes.py
fedimapper/services/: db.py  db_session.py  diaspora.py  jinja.py  mastodon.py  networking.py  nodeinfo.py  peertube.py  stopwords.py  www.py
fedimapper/tasks/: ingest.py
fedimapper/tasks/ingesters/: diaspora.py  mastodon.py  nodeinfo.py  peertube.py  utils.py
fedimapper/utils/: banstats.py  hash.py  openapi.py  queuerunner.py
mastodon_tracking/: cli.py  run.py  settings.py
mastodon_tracking/models/: ban.py  evil.py  instance.py  peer.py
mastodon_tracking/services/: mastodon.py
mastodon_tracking/tasks/: ingest.py
tests/: test_tasks_ingest_utils.py
tests/services/: test_networking.py  test_stopwords.py
(+3 files in other folders)
