[metadata]
name = fedimapper
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = fedimapper/_version.py
versionfile_build = fedimapper/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
  aiosqlite
  asyncpg
  alembic
  cachetools
  cymruwhois
  fastapi
  httpx
  jinja2
  psutil
  psycopg2-binary
  pydantic
  ruamel.yaml
  semver
  SQLAlchemy
  starlette
  tld
  typer

[options.extras_require]
dev =
  black
  build
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  ruamel.yaml
  types-psutil
  types-cachetools


[options.package_data]
fedimapper = py.typed


[entry_points]
console_scripts =
  fedimapper = "fedimapper.cli:app"
